fix: align mobile tabbar breakpoint

--- a/static/css/mobile-shell.css
+++ b/static/css/mobile-shell.css
@@ -1538,7 +1538,7 @@ html.dark {
     }
 }
 
-@media (min-width: 641px) {
+@media (min-width: 901px) {
     .mobile-tabbar {
         display: none !important;
     }
